Fix overflow configuration

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,5 +30,4 @@ section {
 
 article {
   padding: 48px;
-  overflow: scroll;
 }
